<resources>
    <string name="app_name">PlayBow</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_first_name">First name must be >3 characters</string>
    <string name="invalid_last_name">Last name must be >3 characters</string>
    <string name="invalid_postal_address">Postal address must be >9 characters</string>
    <string name="invalid_account_adjustment">Account adjustment must be more than $9</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_dog">User has no dogs!</string>
    <string name="no_dog_image">https://playbow-aws-django-static.s3.amazonaws.com/media/no_dog.jpg</string>
    <string name="action_search">Search</string>
    <string name="recycler_dog_image_desc">photo of first dog</string>
    <string name="home_activity_recycler_options">⋮</string>
    <string name="title_activity_individual_user">IndividualUserActivity</string>
    <string name="tab_text_1">User Details</string>
    <string name="tab_text_2">Calendar</string>
    <string name="tab_text_3">Financial History</string>
    <string name="home_tab_text_1">Daycare Calendar</string>
    <string name="home_tab_text_2">Clients</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Fragment User Details -->
    <string name="fragment_user_details_first_name">First Name</string>
    <string name="fragment_user_details_last_name">Last Name</string>
    <string name="fragment_user_details_email_username">Email/Username</string>
    <string name="fragment_user_details_account_status">Account Status</string>
    <string name="fragment_user_details_inactive">Inactive</string>
    <string name="fragment_user_details_active">Active</string>
    <string name="fragment_user_details_address">Address</string>
    <string name="fragment_user_details_full_customer_address">Full customer address</string>
    <string name="fragment_user_details_balance">Balance</string>
    <string name="fragment_user_details_adjustment_amount">Adjustment</string>
    <string name="fragment_user_details_password_validation">Validate</string>
    <string name="fragment_user_details_new_password">New Password</string>
    <string name="fragment_user_details_password">Password</string>
    <string name="fragment_daycare_calendar_textview">"Dogs coming in: %1$d</string>

    <string name="home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="recycler_view_financial_history_amount_remaining">Amount Remaining</string>
    <string name="fragment_user_details_financial_amount_ajustment">Amount Ajustment</string>
    <string name="main_menu_options">Options</string>
    <string name="navigation_menu_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Settings Dashboard -->
    <string name="fragment_settings_dashboard_ios_version">iOS Version:</string>
    <string name="fragment_settings_dashboard_android_version">Android Version:</string>
    <string name="activity_settings_dashboard_unlimited_standard_price">Unlimited Standard Price:</string>
    <string name="activity_settings_dashboard_unlimited_plus_price">Unlimited Plus Price:</string>
    <string name="activity_settings_dashboard_daily_refund_percentage">Daily Refund Percentage:</string>
    <string name="activity_settings_dashboard_monthly_refund_percentage">Monthly Refund Percentage:</string>
</resources>
