<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="model"
            type="com.jassycliq.playbowcs.model.OwnershipModel.UserProfile"/>
        <variable
            name="imageUrl"
            type="String" />
        <variable
            name="handlers"
            type="com.jassycliq.playbowcs.activity.ui.userDetails.UserDetailsFragment.UserDetailsHandler" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_user_detail_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                app:imgUrl="@{model.dogOwnership.dogs.size() > 0 ? model.dogOwnership.dogs.get(0).dogPhoto : @string/no_dog_image}"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@id/account_status_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".30"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/first_name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/fragment_user_details_first_name"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".30" />

            <TextView
                android:id="@+id/last_name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/fragment_user_details_last_name"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/first_name_text_view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".30" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_edit_text_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:hint="@{model.userFirstName}"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toBottomOf="@id/first_name_text_view"
                app:layout_constraintWidth_percent=".30" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_edit_text_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/first_name_edit_text_layout"
                app:layout_constraintTop_toBottomOf="@id/last_name_text_view"
                app:layout_constraintWidth_percent=".30"
                android:hint="@{model.userLastName}"
                />

            <TextView
                android:id="@+id/email_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/prompt_email"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toBottomOf="@id/first_name_edit_text_layout" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@{model.username}"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toBottomOf="@id/email_text_view"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/account_status_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/fragment_user_details_account_status"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/chip_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checkChips="@{model}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/account_status_text_view"
                app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip2"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_user_details_inactive"
                    android:textColor="@color/chip_text_list"
                    app:chipBackgroundColor="@color/bg_chip_state_list" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip4"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_user_details_active" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/address_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/fragment_user_details_address"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chip_group" />

            <EditText
                android:id="@+id/editTextTextPostalAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="AUTOFILL_HINT_POSTAL_ADDRESS"
                android:ems="10"
                android:hint="@string/fragment_user_details_full_customer_address"
                android:inputType="textPostalAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_text_view" />

            <TextView
                android:id="@+id/account_balance_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/fragment_user_details_balance"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextTextPostalAddress" />

            <TextView
                android:id="@+id/account_balance_summary_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:balanceText="@{model}"
                android:textAlignment="center"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_balance_text_view" />

            <TextView
                android:id="@+id/adjustment_amount_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/fragment_user_details_adjustment_amount"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_balance_summary_text_view" />

            <EditText
                android:id="@+id/account_balance_editTextNumberDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="24sp"
                android:hint="@string/fragment_user_details_adjustment_amount"
                app:layout_constraintEnd_toStartOf="@+id/add_balance_button"
                app:layout_constraintStart_toEndOf="@+id/subtract_balance_button"
                app:layout_constraintTop_toBottomOf="@id/adjustment_amount_textview"
                android:importantForAutofill="no" />

            <ImageButton
                android:id="@+id/add_balance_button"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:onClick="@{() -> handlers.setAdjustmentPositiveColor()}"
                android:scaleType="centerInside"
                android:src="@drawable/ic_add_circle_24px"
                android:tint="@color/onSurface"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/account_balance_editTextNumberDecimal"
                app:layout_constraintTop_toBottomOf="@id/adjustment_amount_textview" />

            <ImageButton
                android:id="@+id/subtract_balance_button"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:onClick="@{() -> handlers.setAdjustmentNegativeColor()}"
                android:scaleType="centerInside"
                android:src="@drawable/ic_remove_circle_24px"
                android:tint="@color/onSurface"
                app:layout_constraintEnd_toStartOf="@+id/account_balance_editTextNumberDecimal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/adjustment_amount_textview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>